objects/Integration_EndPoint_Setting_Details__mdt.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ApiKey__c</fullName>
        <label>ApiKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Password__c</fullName>
        <label>Application Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Username__c</fullName>
        <label>Application Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Timeout__c</fullName>
        <label>Call Timeout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point_URL__c</fullName>
        <label>End Point URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <label>Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenRefreshTime__c</fullName>
        <label>TokenRefreshTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration EndPoint Setting Details</label>
    <pluralLabel>Integration_EndPoint_Setting_Details</pluralLabel>
</CustomObject>